Convert configuration to yaml

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "API"
   ],
   "scripts": {
-    "dev": "node src/build/esbuild.config.mjs --configFile=config.dev.json",
+    "dev": "node src/build/esbuild.config.mjs --configFile=config.dev.yaml",
     "generate": "node src/build/generate.mjs",
     "test": "jest --silent=false",
     "build": "tsc -noEmit -skipLibCheck && node src/build/esbuild.config.mjs production",
