--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "API"
   ],
   "scripts": {
-    "dev": "node src/cli/esbuild.config.mjs --configFile=config/config.dev.yaml",
-    "dev:generate": "pnpm run build && node dist/api-portal-cli.js --configFile=config/config.dev.yaml --command=generate",
+    "dev": "pnpm run dev:build watch",
+    "dev:build": "tsc -noEmit -skipLibCheck && node src/cli/esbuild.config.mjs",
+    "dev:generate": "pnpm run dev:build && node dist/api-portal-cli.js --configFile=config/config.dev.yaml --command=generate",
+    "dev:applyTags": "pnpm run dev:build && node dist/api-portal-cli.js --configFile=config/config.dev.yaml --command=applyTags",
     "generate": "node dist/api-portal-cli.js --command=generate",
     "validate": "node dist/api-portal-cli.js --command=validate",
+    "applyTags": "node dist/api-portal-cli.js --command=applyTags",
     "test": "jest --silent=false",
     "build": "tsc -noEmit -skipLibCheck && node src/cli/esbuild.config.mjs production",
-    "config-schema": "typescript-json-schema --required src/cli/buildConfig.ts BuildConfig > dist/buildConfig.schema.json && typescript-json-schema --required src/cli/servicesTags.ts ServicesTags > dist/servicesTags.schema.json"
+    "configSchema": "typescript-json-schema --required src/cli/buildConfig.ts BuildConfig > dist/buildConfig.schema.json && typescript-json-schema --required src/cli/servicesTags.ts ServicesTags > dist/servicesTags.schema.json"
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.1",
