--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^18.15.11",
     "@types/object-hash": "^3.0.2",
     "@types/plantuml-encoder": "^1.4.0",
+    "@types/pluralize": "^0.0.30",
     "@types/swagger-ui": "^3.52.0",
     "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
