--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "pnpm run dev:build watch",
     "dev:build": "tsc -noEmit -skipLibCheck && node src/cli/esbuild.config.mjs --configFile=config/config.dev.yaml",
-    "dev:generate": "pnpm run dev:build && node dist/api-portal-cli.js --configFile=config/config.dev.yaml --command=generate",
+    "dev:generate": "cp -rf ./test/data/* ./inputApi && pnpm run dev:build && node dist/api-portal-cli.js --configFile=config/config.dev.yaml --command=generate",
     "dev:applyTags": "pnpm run dev:build && node dist/api-portal-cli.js --configFile=config/config.dev.yaml --command=applyTags --servicesTagsFile=config/servicesTags.dev.json",
     "generate": "node dist/api-portal-cli.js --command=generate",
     "validate": "node dist/api-portal-cli.js --command=validate",
