Filtering based on tag improved to go deeper in the versions

--- a/config/config.dev.yaml
+++ b/config/config.dev.yaml
@@ -38,9 +38,9 @@ browser:
         Client3: false
     other:
       status:
-        status0: false
-        status1: false
-        status2: false
+        Validated: false
+        NotValidated: false
+        Draft: false
       tags:
         tag0: false
         tag1: false
