--- a/test/data/tapy/tapy.0.10.yaml
+++ b/test/data/tapy/tapy.0.10.yaml
@@ -1,3 +1,5 @@
+x-metadata:
+  status: 0
 info:
   title: tapy Dokumentation
   description: "Alle X Sekunden wird jeder Endpunkt vom Cadu-Server angefragt. Bei einer Antwort des tapy-Servers mit nextRequest=true enthält die nächste Anfrage des Cadu-Servers die angeforderten Daten"
